# ms-fabric-sdk-core

./: .gitignore  LICENSE  README.md  item_specific_apis.md  pyproject.toml  requirements.txt  setup.py  usage_patterns.md
msfabricpysdkcore/: __init__.py  admin_item.py  admin_workspace.py  adminapi.py  auth.py  capacity.py  client.py  coreapi.py  deployment_pipeline.py  domain.py  environment.py  eventstream.py  fabric_azure_capacity.py  fabric_azure_client.py  folder.py  item.py  job_instance.py  lakehouse.py  long_running_operation.py  onelakeshortcut.py  otheritems.py  spark_custom_pool.py  workspace.py
msfabricpysdkcore/util/: __init__.py  logger.py
releasenotes/: release_notes.md
samples/: Migrationnotebook.ipynb
