[build-system]
requires = ["setuptools >= 65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msfabricpysdkcore"
version = "0.0.4"
dynamic = ["dependencies"]
authors = [
  { name="Andreas Rederer"},
]
description = "A Python SDK for Microsoft Fabric"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/DaSenf1860/ms-fabric-sdk-core"
